--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,92 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(36, 33, 36);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.header {
+  margin: auto;
+  left: 50%;
+  color: aliceblue;
+  width: 100%;
+  text-align: center;
+  font-size: 24px;
+}
+.input-container {
+  margin: auto;
+  left: 50%;
+  text-align: center;
+}
+input {
+  width: 200px;
+  padding: 5px 20px;
+  text-align: match-parent;
+  margin-bottom: 8px;
+  color: rgb(0, 66, 66);
+  font-size: 12px;
+  letter-spacing: 2px;
+}
+
+.guess-button {
+  width: 120px;
+  background-color: rgb(207, 255, 203);
+  border-radius: 5px;
+  padding: 3px 0;
+}
+.reset-button {
+  width: 120px;
+  background-color: rgb(202, 202, 202);
+  border-radius: 5px;
+  padding: 3px 0;
 }
 
 .attempt-container {
   margin: auto;
   left: 50%;
-  background-color: rgb(218, 218, 218);
-  padding: 30px;
+  background-color: rgb(241, 237, 200);
+  padding: 10px 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  width: 420px;
+  border-radius: 8px;
 }
 .attempt-individual {
   display: flex;
   flex-direction: row;
   width: 400px;
   justify-content: space-between;
+  padding: 10px 0;
 }
 .attempt-details {
   flex-direction: column;
+  justify-self: stretch;
+  text-align: center;
+  color: rgb(0, 66, 66);
+}
+.attempt-title {
+  flex-direction: column;
   justify-content: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: rgb(0, 66, 66);
 }
 
 .game-over {
   margin: auto;
-  color: blue;
-  float: right;
-  padding-top: 30px;
-  margin-left: 50px;
-  font-size: 40px;
+  text-align: center;
+  width: 700px;
+  padding-top: 12px;
+  font-size: 26px;
+  color: rgb(175, 235, 200);
+}
+
+.alerts {
+  margin: auto;
+  left: 50%;
+  text-align: center;
+  width: 750px;
+  height: 30px;
+  color: rgb(255, 177, 197);
+  padding: 5px 20px;
+  font-size: 16px;
 }
