--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,7 @@ input {
   width: 750px;
   height: 30px;
   color: rgb(255, 177, 197);
-  padding: 5px 20px;
+  padding-top: 15px;
+  padding-bottom: 10px;
   font-size: 16px;
 }
